# ml-project

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CNN.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
mlp/: metrics.py  preprocessing.py  types.py
mlp/network/: __init__.py  _activations.py  _activations.pyi  _layers.py  _network.py
mlp/tree/: _split.py  _tree.py
report/hyperparameters/: ffnn.py  results_ffnn.json  results_tree.json  summary_ffnn.py  summary_tree.py  tree.py
report/reference-implementations/: CNN.ipynb  ffnn.py  results_ffnn.tex  results_tree.tex  tree.py
src/mlp/: metrics.py  preprocessing.py
src/mlp/network/: __init__.py  _activations.py  _activations.pyi  _layers.py  _network.py
src/mlp/tree/: __init__.py  _tree.py
